playwright install 캐싱되게 수정

--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -11,6 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Cache Playwright browsers
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            playwright-browsers-${{ runner.os }}-
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
