--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -37,3 +37,11 @@ jobs:
           NAVER_ID: ${{ secrets.NAVER_ID }}
           NAVER_PW: ${{ secrets.NAVER_PW }}
         run: node naver-login.js
+
+      - name: Upload error screenshots (if any)
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: error-screenshots
+          path: |
+            mainFrame_not_found_*.png
