--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -2,8 +2,8 @@ name: Blog Auto Batch
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 21 * * *' # 매일 0시 실행 (원하는 주기로 수정)
+  # schedule:
+  # - cron: '0 21 * * *' # 매일 0시 실행 (원하는 주기로 수정)
 
 jobs:
   run-batch:
@@ -30,13 +30,13 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run naver-login.js
+      - name: Run news-crawling.js
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           BLOG_NAME: ${{ secrets.BLOG_NAME }}
           NAVER_ID: ${{ secrets.NAVER_ID }}
           NAVER_PW: ${{ secrets.NAVER_PW }}
-        run: node naver-login.js
+        run: node news-crawling.js
 
       - name: Upload error screenshots (if any)
         if: always()
