--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "dotenv": "^17.2.1"
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "fast-xml-parser": "^5.2.5"
   }
 }
