--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "fast-xml-parser": "^5.2.5"
+    "fast-xml-parser": "^5.2.5",
+    "moment": "^2.30.1"
   }
 }
