--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -2,22 +2,33 @@ name: Blog Auto Batch
 
 on:
   schedule:
-    - cron: '50 21 * * *' # 한국시간 오전 6:50에 해당 (21:50 UTC 전날)
+    - cron: '50 21 * * *' # 한국시간 오전 6:50 (UTC 21:50 전날)
   workflow_dispatch:
 
 jobs:
   run-batch:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Seoul
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Cache Playwright browsers
         uses: actions/cache@v3
         with:
           path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            playwright-browsers-${{ runner.os }}-
+            ${{ runner.os }}-playwright-
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -27,18 +38,22 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      - name: Install Playwright Browsers (only if missing)
+        run: |
+          if [ ! -d ~/.cache/ms-playwright ]; then
+            npx playwright install --with-deps
+          fi
 
       - name: Run news-crawling.js
+        run: node news-crawling.js > crawl_log.txt 2>&1
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: node news-crawling.js
 
-      - name: Upload error screenshots (if any)
+      - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: error-screenshots
+          name: crawl-artifacts
           path: |
+            crawl_log.txt
             mainFrame_not_found_*.png
