github actions에 data디렉터리 추가

--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -56,4 +56,5 @@ jobs:
           name: crawl-artifacts
           path: |
             crawl_log.txt
+            data/**
             mainFrame_not_found_*.png
