--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 mk-data/
+data/
 error-log/
 coupang.count.json
 
@@ -39,6 +40,7 @@ __pycache__/
 .firebase/
 
 #log, data file
+news.json
 mk-news.json
 .gemini-error.log
 .naver-upload-error.log
