--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/**
+          git add -f data/**
           # 변경사항이 있을 때만 커밋
           if ! git diff --cached --quiet; then
             git commit -m "자동 업데이트 news data"
