--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "fast-xml-parser": "^5.2.5",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "node-fetch": "^3.3.2"
   }
 }
