--- a/.github/workflows/aitimes.yml
+++ b/.github/workflows/aitimes.yml
@@ -1,21 +1,24 @@
 name: AI TIMES Crawling
 
 on:
-  # schedule:
-  #   - cron: '0 22 * * *'  # 오전 7시 (KST)
-  #   - cron: '0 23 * * *'  # 오전 8시 (KST)
-  #   - cron: '0 0 * * *'   # 오전 9시 (KST)
+  schedule:
+    # - cron: '0 22 * * *'  # 오전 7시 (KST)
+    # - cron: '0 23 * * *'  # 오전 8시 (KST)
+    # - cron: '0 0 * * *'   # 오전 9시 (KST)
   #   - cron: '0 1 * * *'   # 오전 10시 (KST)
   #   - cron: '0 2 * * *'   # 오전 11시 (KST)
   #   - cron: '0 3 * * *'   # 정오 12시 (KST)
   #   - cron: '0 4 * * *'   # 오후 1시 (KST)
   #   - cron: '0 5 * * *'   # 오후 2시 (KST)
   #   - cron: '0 6 * * *'   # 오후 3시 (KST)
-  #   - cron: '0 7 * * *'   # 오후 4시 (KST)
-  #   - cron: '0 8 * * *'   # 오후 5시 (KST)
-  #   - cron: '0 9 * * *'   # 오후 6시 (KST)
-  #   - cron: '0 10 * * *'  # 오후 7시 (KST)
-    
+    # - cron: '0 7 * * *'   # 오후 4시 (KST)
+    - cron: '0 8 * * *'   # 오후 5시 (KST)
+    - cron: '0 9 * * *'   # 오후 6시 (KST)
+    - cron: '0 10 * * *'  # 오후 7시 (KST)
+    - cron: '0 11 * * *'  # 오후 8시 (KST)
+    - cron: '0 12 * * *'  # 오후 9시 (KST)
+    # - cron: '0 13 * * *'  # 오후 10시 (KST)
+
   workflow_dispatch:
 
 permissions:
@@ -60,8 +63,8 @@ jobs:
             npx playwright install --with-deps
           fi
 
-      - name: Run crawling-aitimes.js
-        run: node crawling-aitimes.js > aitimes_crawl_log.txt 2>&1
+      - name: Run aitimes-crawling.js
+        run: node aitimes-crawling.js > aitimes_crawl_log.txt 2>&1
         env:
           GEMINI_API_KEY_AITIMES: ${{ secrets.GEMINI_API_KEY_AITIMES }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
