github action 수정

--- a/.github/workflows/blog-auto-batch.yml
+++ b/.github/workflows/blog-auto-batch.yml
@@ -1,9 +1,9 @@
 name: Nate News Crawling
 
 on:
-  # schedule:
-  #   - cron: '50 21 * * *' # 한국시간 오전 6:50 (UTC 21:50 전날)
-  #   - cron: '00 7 * * *' # 한국시간 오후 4:00 (UTC 07:00)
+  schedule:
+    - cron: '0 22 * * *' # 한국시간 오전 6:50 (UTC 21:50 전날)
+    - cron: '0 7 * * *' # 한국시간 오후 4:00 (UTC 07:00)
 
   workflow_dispatch:
 
