--- a/.github/workflows/hs-batch.yml
+++ b/.github/workflows/hs-batch.yml
@@ -1,16 +1,16 @@
 name: HS Crawling
 
 on:
-  schedule:
-    - cron: '00 1 * * *'
-    - cron: '00 2 * * *' 
-    - cron: '00 3 * * *' 
-    - cron: '00 4 * * *' 
-    - cron: '00 5 * * *' 
-    - cron: '00 6 * * *' 
-    - cron: '00 7 * * *' # 한국시간 오후 4:00 (UTC 07:00)
-    - cron: '00 8 * * *' 
-    - cron: '00 9 * * *' 
+  # schedule:
+    # - cron: '00 1 * * *'
+    # - cron: '00 2 * * *' 
+    # - cron: '00 3 * * *' 
+    # - cron: '00 4 * * *' 
+    # - cron: '00 5 * * *' 
+    # - cron: '00 6 * * *' 
+    # - cron: '00 7 * * *' # 한국시간 오후 4:00 (UTC 07:00)
+    # - cron: '00 8 * * *' 
+    # - cron: '00 9 * * *' 
     
   workflow_dispatch:
 
