--- a/.github/workflows/nate-ji.yml
+++ b/.github/workflows/nate-ji.yml
@@ -1,23 +1,9 @@
-name: AI TIMES Crawling
+name: Nate News Crawling
 
 on:
   schedule:
-     - cron: '0 22 * * *'  # 오전 7시 (KST)
-     - cron: '0 23 * * *'  # 오전 8시 (KST)
-     - cron: '0 0 * * *'   # 오전 9시 (KST)
-     - cron: '0 1 * * *'   # 오전 10시 (KST)
-     - cron: '0 2 * * *'   # 오전 11시 (KST)
-     - cron: '0 3 * * *'   # 정오 12시 (KST)
-     - cron: '0 4 * * *'   # 오후 1시 (KST)
-     - cron: '0 5 * * *'   # 오후 2시 (KST)
-     - cron: '0 6 * * *'   # 오후 3시 (KST)
-     - cron: '0 7 * * *'   # 오후 4시 (KST)
-     - cron: '0 8 * * *'   # 오후 5시 (KST)
-     - cron: '0 9 * * *'   # 오후 6시 (KST)
-    #- cron: '0 10 * * *'  # 오후 7시 (KST)
-    #- cron: '0 11 * * *'  # 오후 8시 (KST)
-    #- cron: '0 12 * * *'  # 오후 9시 (KST)
-    # - cron: '0 13 * * *'  # 오후 10시 (KST)
+    - cron: '0 2 * * *' # 한국시간 오전 6:50 (UTC 21:50 전날)
+    - cron: '0 8 * * *' # 한국시간 오후 5:00 (UTC 07:00)
 
   workflow_dispatch:
 
@@ -63,10 +49,10 @@ jobs:
             npx playwright install --with-deps
           fi
 
-      - name: Run aitimes-crawling.js
-        run: node aitimes-crawling.js > aitimes_crawl_log.txt 2>&1
+      - name: Run nate-ji-crawling.js
+        run: node nate-ji-crawling.js > nate-ji-crawl_log.txt 2>&1
         env:
-          GEMINI_API_KEY_AITIMES: ${{ secrets.GEMINI_API_KEY_AITIMES }}
+          GEMINI_API_KEY_JI: ${{ secrets.GEMINI_API_KEY_JI }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
@@ -75,7 +61,7 @@ jobs:
         with:
           name: crawl-artifacts
           path: |
-            aitimes_crawl_log.txt
+            nate-ji-crawl_log.txt
             data/**
             mainFrame_not_found_*.png
 
