--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -12,7 +12,7 @@ on:
     # - cron: '0 7 * * *'   # 오후 4시 (KST)
     - cron: '0 8 * * *'   # 오후 5시 (KST)
     # - cron: '0 9 * * *'   # 오후 6시 (KST)
-    - cron: '0 10 * * *'  # 오후 7시 (KST)
+    #- cron: '0 10 * * *'  # 오후 7시 (KST)
     
   workflow_dispatch:
 
