--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -2,7 +2,7 @@ name: mk-crawling [fast*****]
 
 on:
   schedule:
-    - cron: '0 0 * * *'   # 오전 9시 (KST)
+    #- cron: '0 0 * * *'   # 오전 9시 (KST)
     # - cron: '0 1 * * *'   # 오전 10시 (KST)
     - cron: '0 2 * * *'   # 오전 11시 (KST)
     # - cron: '0 3 * * *'   # 정오 12시 (KST)
