--- a/.github/workflows/nate-ji.yml
+++ b/.github/workflows/nate-ji.yml
@@ -2,7 +2,7 @@ name: nate-ji-crawling [elog***]
 
 on:
   schedule:
-    - cron: '0 2 * * *' # 한국시간 오전 6:50 (UTC 21:50 전날)
+    - cron: '0 0 * * *' # 한국시간 오전 9:00
     - cron: '0 8 * * *' # 한국시간 오후 5:00 (UTC 07:00)
 
   workflow_dispatch:
