--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Run mk-crawling.js
         run: node mk-crawling.js > mk_crawl_log.txt 2>&1
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY_FASTMAN }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
