--- a/.github/workflows/nate.yml
+++ b/.github/workflows/nate.yml
@@ -49,10 +49,10 @@ jobs:
             npx playwright install --with-deps
           fi
 
-      - name: Run nate-crawling.js
-        run: node nate-crawling.js > nate-crawl_log.txt 2>&1
+      - name: Run nate-wow-naver.js
+        run: node nate-wow-naver.js > nate-crawl_log.txt 2>&1
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY_WOW }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
