--- a/.github/workflows/nate.yml
+++ b/.github/workflows/nate.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run nate-wow-crawling.js
         run: node nate-wow-crawling.js > nate-crawl_log.txt 2>&1
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY_WOW }}
+          GEMINI_API_KEY_WOW: ${{ secrets.GEMINI_API_KEY_WOW }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
