--- a/.github/workflows/coupang.yml
+++ b/.github/workflows/coupang.yml
@@ -2,7 +2,7 @@ name: coupang
 
 on:
   schedule:
-    - cron: '0 23 * * *'   # 오전 9시 (KST)
+    - cron: '40 22 * * *'   # 오전 7시 40분 (KST)
     
   workflow_dispatch:
 
