--- a/.github/workflows/nate-review36524.yml
+++ b/.github/workflows/nate-review36524.yml
@@ -1,8 +1,8 @@
 name: nate-review36524-crawling
 
 on:
-  schedule:
-    - cron: '0 1 * * *' # 한국시간 오전 10:00
+  #schedule:
+    # - cron: '0 1 * * *' # 한국시간 오전 10:00
     # - cron: '0 8 * * *' # 한국시간 오후 5:00 (UTC 07:00)
 
   workflow_dispatch:
