--- a/.github/workflows/nate-review36524.yml
+++ b/.github/workflows/nate-review36524.yml
@@ -1,8 +1,8 @@
 name: nate-review36524-crawling
 
 on:
-  # schedule:
-  #   - cron: '0 2 * * *' # 한국시간 오전 12:00
+  schedule:
+    - cron: '0 2 * * *' # 한국시간 오전 12:00
 
   workflow_dispatch:
 
