--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,29 @@
 name: Schedule Test
-
 on:
   schedule:
-    - cron: '0 01 * * *'
-    - cron: '0 02 * * *'
-    - cron: '0 03 * * *'
-    - cron: '0 04 * * *'
-    - cron: '0 05 * * *'
-    - cron: '0 06 * * *'
-    - cron: '0 07 * * *'
-    - cron: '0 08 * * *'
-    - cron: '0 09 * * *'
-    - cron: '0 10 * * *'
-    - cron: '0 11 * * *'
-    - cron: '0 12 * * *'
-    - cron: '0 13 * * *'
-    - cron: '0 14 * * *'
-    - cron: '0 15 * * *'
-    - cron: '0 16 * * *'
-    - cron: '0 17 * * *'
-    - cron: '0 18 * * *'
-    - cron: '0 19 * * *'
-    - cron: '0 20 * * *'
-    - cron: '0 21 * * *'
-    - cron: '0 22 * * *'
-    - cron: '0 23 * * *'
+    - cron: '0 01 * * *' #12:21 AM
+    - cron: '0 02 * * *' #1:41 AM
+    - cron: '0 03 * * *' #2:31 AM
+    - cron: '0 04 * * *' #3:22 AM
+    - cron: '0 05 * * *' #4:18 AM
+    - cron: '0 06 * * *' #5:18 AM
+    - cron: '0 07 * * *' #6:17 AM
+    - cron: '0 08 * * *' #7:16 AM
+    - cron: '0 09 * * *' #8:26 AM
+    - cron: '0 10 * * *' #12:02 PM
+    - cron: '0 11 * * *' #12:44 PM
+    - cron: '0 12 * * *' #1:11 PM
+    - cron: '0 13 * * *' #1:46 PM
+    - cron: '0 14 * * *' #2:29 PM
+    - cron: '0 15 * * *' #3:44 PM
+    - cron: '0 16 * * *' #4:29 PM
+    - cron: '0 17 * * *' #5:33 PM
+    - cron: '0 18 * * *' #
+    - cron: '0 19 * * *' #
+    - cron: '0 20 * * *' #
+    - cron: '0 21 * * *' #
+    - cron: '0 22 * * *' #
+    - cron: '0 23 * * *' #
   workflow_dispatch:
 
 permissions:
