--- a/.github/workflows/zloger-daum-entertainment.yml
+++ b/.github/workflows/zloger-daum-entertainment.yml
@@ -1,10 +1,12 @@
 name: zloger-daum-enter-crawling [******]
 
 on:
-  #schedule:
-    #- cron: '0 2 * * *' #  12:00
-    #- cron: '0 5 * * *' #  15:00
-
+  schedule:
+    - cron: '0 09 * * *' #8:26 AM
+    - cron: '0 10 * * *' #12:02 PM
+    - cron: '0 14 * * *' #2:29 PM
+    - cron: '0 15 * * *' #3:44 PM
+    - cron: '0 16 * * *' #4:29 PM
   workflow_dispatch:
 
 permissions:
