--- a/.github/workflows/zloger-daum-entertainment.yml
+++ b/.github/workflows/zloger-daum-entertainment.yml
@@ -1,12 +1,12 @@
 name: zloger-daum-enter-crawling [******]
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
-    - cron: '0 1 * * *'
-    - cron: '0 2 * * *'
-    - cron: '0 3 * * *'
-    - cron: '0 4 * * *'
+  #schedule:
+  #  - cron: '0 0 * * *'
+  #  - cron: '0 1 * * *'
+  #  - cron: '0 2 * * *'
+  #  - cron: '0 3 * * *'
+  #  - cron: '0 4 * * *'
   workflow_dispatch:
 
 permissions:
