--- a/.github/workflows/m1.yml
+++ b/.github/workflows/m1.yml
@@ -1,13 +1,13 @@
 name: m1-crawling [mloger****]
 
 on:
-  schedule:
-    - cron: '0 23 * * *'   # 10시 (KST)
-    - cron: '0 1 * * *'   # 11시 (KST)
-    - cron: '0 3 * * *'   # 12시 (KST)
-    - cron: '0 5 * * *'   # 14시 (KST)
-    - cron: '0 7 * * *'   # 16시 (KST)
-    - cron: '0 9 * * *'  # 18시 (KST)
+  #schedule:
+    #- cron: '0 23 * * *'   # 10시 (KST)
+    #- cron: '0 1 * * *'   # 11시 (KST)
+    #- cron: '0 3 * * *'   # 12시 (KST)
+    #- cron: '0 5 * * *'   # 14시 (KST)
+    #- cron: '0 7 * * *'   # 16시 (KST)
+    #- cron: '0 9 * * *'  # 18시 (KST)
 
   workflow_dispatch:
 
