--- a/.github/workflows/zloger-daum-entertainment.yml
+++ b/.github/workflows/zloger-daum-entertainment.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     - cron: '0 0 * * *'
     - cron: '0 1 * * *'
-    - cron: '0 2 * * *'
+    # - cron: '0 2 * * *'
     - cron: '0 3 * * *'
-    - cron: '0 4 * * *'
+    # - cron: '0 4 * * *'
   workflow_dispatch:
 
 permissions:
