[hloger] webhook 추가

--- a/.github/workflows/zloger-daum-entertainment.yml
+++ b/.github/workflows/zloger-daum-entertainment.yml
@@ -83,3 +83,8 @@ jobs:
             echo "No changes to commit"
           fi
 
+      - name: Trigger Webhook
+        if: success()
+        run: |
+          curl -v -f "https://unscalded-landlocked-roman.ngrok-free.dev/webhook-test/6811977a-f9da-4ac4-a531-0f8ab2be8378"
+
