--- a/.github/workflows/nate.yml
+++ b/.github/workflows/nate.yml
@@ -54,6 +54,10 @@ jobs:
         env:
           GEMINI_API_KEY_WOW: ${{ secrets.GEMINI_API_KEY_WOW }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+      - name: Trigger Webhook
+        if: success()
+        run: |
+          curl -v -f "${{ secrets.NEWS_HOOK }}"
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
         if: always()
