--- a/.github/workflows/daum-entertainment.yml
+++ b/.github/workflows/daum-entertainment.yml
@@ -58,6 +58,10 @@ jobs:
         env:
           GEMINI_API_KEY_HS: ${{ secrets.GEMINI_API_KEY_HS }}
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+      - name: Trigger Webhook
+        if: success()
+        run: |
+          curl -v -f "${{ secrets.SU_HOOK }}"
       # 데이터 파일과 로그 아티팩트 업로드
       - name: Upload artifacts
         if: always()
