[eloger] action edit

--- a/.github/workflows/nate-ji.yml
+++ b/.github/workflows/nate-ji.yml
@@ -84,4 +84,4 @@ jobs:
       - name: Trigger Webhook
         if: success()
         run: |
-          curl -v -f "${{ secrets.HLOGER_HOOK }}"
+          curl -v -f "${{ secrets.JI_WEBHOOK }}"
