--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ on:
     # - cron: '0 21 * * *' #
     # - cron: '0 22 * * *' #
     # - cron: '0 23 * * *' #
-  # workflow_dispatch:
+  workflow_dispatch:
 
 permissions:
   contents: read
