--- a/.github/workflows/m2.yml
+++ b/.github/workflows/m2.yml
@@ -2,12 +2,11 @@ name: m2-crawling [neews2]
 
 on:
   schedule:
-    - cron: '0 23 * * *'   # 10시 (KST)
-    - cron: '0 1 * * *'   # 11시 (KST)
-    - cron: '0 3 * * *'   # 12시 (KST)
-    - cron: '0 5 * * *'   # 14시 (KST)
-    - cron: '0 7 * * *'   # 16시 (KST)
-    - cron: '0 9 * * *'  # 18시 (KST)
+    # - cron: '0 23 * * *'   # 10시 (KST)
+    # - cron: '0 1 * * *'   # 11시 (KST)
+    # - cron: '0 3 * * *'   # 12시 (KST)
+    # - cron: '0 5 * * *'   # 14시 (KST)
+    # - cron: '0 7 * * *'   # 16시 (KST)
 
   workflow_dispatch:
 
