--- a/.github/workflows/m1.yml
+++ b/.github/workflows/m1.yml
@@ -1,8 +1,8 @@
 name: m1-crawling [neews1]
 
 on:
-  #schedule:
-    #- cron: '0 23 * * *'   # 10시 (KST)
+  schedule:
+    - cron: '0 23 * * *'   # 10시 (KST)
     #- cron: '0 1 * * *'   # 11시 (KST)
     #- cron: '0 3 * * *'   # 12시 (KST)
     #- cron: '0 5 * * *'   # 14시 (KST)
