--- a/.github/workflows/m2.yml
+++ b/.github/workflows/m2.yml
@@ -1,8 +1,8 @@
 name: m2-crawling [neews2]
 
 on:
-  # schedule:
-    # - cron: '0 23 * * *'   # 10시 (KST)
+  schedule:
+    - cron: '0 23 * * *'   # 10시 (KST)
     # - cron: '0 1 * * *'   # 11시 (KST)
     # - cron: '0 3 * * *'   # 12시 (KST)
     # - cron: '0 5 * * *'   # 14시 (KST)
