--- a/.github/workflows/daum-entertainment.yml
+++ b/.github/workflows/daum-entertainment.yml
@@ -1,8 +1,8 @@
 name: daum-enter-crawling [******cake]
 
 on:
-  schedule:
-    - cron: '0 0 * * *'   # 11시 (KST)
+  # schedule:
+    # - cron: '0 0 * * *'   # 11시 (KST)
     #- cron: '0 2 * * *'   # 12시 (KST)
     #- cron: '0 4 * * *'   # 13시 (KST)
     #- cron: '0 6 * * *'   # 15시 (KST)
